--- a/app.json
+++ b/app.json
@@ -3,9 +3,10 @@
     "name": "StocksBrokingPlatform",
     "slug": "StocksBrokingPlatform",
     "version": "1.0.0",
+    "runtimeVersion": "1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
